--- a/index.html
+++ b/index.html
@@ -1,9 +1,1 @@
-<!doctype html>
-<html>
-  <head>
-    <title>This is the title of the webpage!</title>
-  </head>
-  <body>
-    <p>Lux000</p>
-  </body>
-</html>
+Lux000
