--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         
 </script>
 
-<h1 style="position:fixed; top:20px; right:790px">Kannst du steinreich werden?</h1>
+<h1 style="text-align: center; top:20px; ">Kannst du steinreich werden?</h1>
 <br>
 <br>
 <button onClick="mausklick()" style="border:none; background:none; box-shadow:none;">  <img src="stein.png" width="100" height="100" style="position: fixed; top:160px; right:1000px;"> </button>
