--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <h1 style="text-align: center; top:20px; ">Kannst du steinreich werden?</h1>
-    <label for="ziel"> Erreiche 50 Steine um die nächste Stufe zu erreichen</label>
+    <label for="ziel"> Sammle 50 Steine um die nächste Stufe zu erreichen</label>
     <p> <progress id="ziel" max="50" value=0>0%</progress></p>
     <br>
     <br>
